--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,16 +1,13 @@
 ---
 - hosts: all
   become: true
-  tasks:
-    - name: update repo index
-      apt:
-        update_cache: yes
-    - name: install apache2 package
-      apt:
-        name: apache2
-        state: latest
 
-    - name: add php support for apache
-      apt:
-        name: libapache2-mod-php
+  tasks:
+    - name: install apache and php
+      package:
+        name:
+          - apache2
+          - php
+        update_cache: yes
         state: latest
+      # when: ansible_distribution == ["Debian", "Ubuntu"]
